<resources>
  <string name="app_name" translatable="false">FreightPad</string>
  <string name="start_label">Start</string>
  <string name="destination_label">Destination</string>
  <string name="your_location">Your location</string>
  <string name="error_description">Ops! Sorry, something went wrong!</string>
  <string name="empty_string" translatable="false"> </string>
  <string name="error_try_again">Try Again</string>
  <string name="ok">OK</string>

  <!-- Calculator Fragment-->
  <string name="calculator_title">Freight Route Calculator</string>
  <string name="tab_info">Info</string>
  <string name="tab_route">Route</string>
  <string name="tab_history">History</string>

  <!-- Info Fragment-->
  <string name="f_info_location_from">From where?</string>
  <string name="f_info_location_to">To where?</string>
  <string name="f_info_axis_display_default_value" translatable="false">2</string>
  <string name="f_info_many_axis">How many axes does the\nvehicle have?</string>
  <string name="f_info_fuel_consume">What is the average fuel\nconsumption (km/l)?</string>
  <string name="f_info_fuel_price">What is the price of fuel?</string>
  <string name="f_info_fuel_consume_default" translatable="false">2,45</string>
  <string name="f_info_fuel_price_default" translatable="false">R$ 2,50</string>
  <string name="f_info_fields_empty">Ops! Some fields are not filled, please fill them</string>
  <string name="f_info_calculate">Calculate</string>

  <!-- Route Fragment-->
  <string name="f_route_info_header">Route Info</string>
  <string name="f_route_start_label">@string/start_label</string>
  <string name="f_route_destination_label">@string/destination_label</string>
  <string name="f_route_distance_label">Distance</string>
  <string name="f_route_duration_label">Duration</string>
  <string name="f_route_nav_map">Route\non map</string>
  <string name="f_route_fuel_toll_header">Fuel and Toll Values</string>
  <string name="f_route_toll_count_label">Toll count</string>
  <string name="f_route_sum_toll">Total toll amount</string>
  <string name="f_route_fuel_needed">Fuel needed</string>
  <string name="f_route_fuel_amount">Total fuel amount</string>
  <string name="f_route_total">Total</string>
  <string name="f_route_general">General</string>
  <string name="f_route_bulk">Bulk</string>
  <string name="f_route_neobulk">Neobulk</string>
  <string name="f_route_refrigerated">Refrigerated</string>
  <string name="f_route_dangerous">Dangerous</string>
  <string name="f_route_antt_header">Minimun ANTT Prices</string>
  <string name="f_route_hint_start_location">Start location</string>
  <string name="f_route_hint_destination_location">Final location</string>
  <string name="f_route_hint_distance" translatable="false">0 KM</string>
  <string name="f_route_hint_duration" translatable="false">00:00</string>
  <string name="f_route_hint_toll_count" translatable="false">0</string>
  <string name="f_route_hint_money" translatable="false">R$ 00,00</string>
  <string name="f_route_hint_fuel_needed" translatable="false">0 L</string>

  <!--  History Fragment-->
  <string name="i_history_start_label">@string/start_label</string>
  <string name="i_history_destination_label">@string/destination_label</string>
  <string name="f_history_empty">No recent searches</string>
  <string name="f_history_feature_on_development">Sorry, this feature is\nin development</string>

  <!-- Search Activity-->
  <string name="a_search_header">Search</string>
  <string name="a_search_location">My Location</string>
  <string name="a_search_permission_permanently_denied">Ops! Permission permanently denied, please change on app settings!</string>

  <string name="a_search_permission_denied">Ops! We need permission to access your location!</string>

</resources>